--- a/CarMedia/CarMedia/CarMedia.csproj
+++ b/CarMedia/CarMedia/CarMedia.csproj
@@ -151,6 +151,7 @@
     <Resource Include="Images\camera_Icon.png" />
     <Resource Include="Images\settings_Icon.png" />
     <Resource Include="Images\clockFace.png" />
+    <Resource Include="Images\voltmeter.png" />
     <Content Include="Music\1. Robert Miles - Children.mp3" />
     <Content Include="Music\13. Paul van Dyk - Home %28Paul van Dyk Remix%29.mp3" />
     <Content Include="Music\8. Motorcycle - As The Rush Comes.mp3" />
